Fix not showing year in Firefox and edge

--- a/src/app/pages/checkout/checkout.component.css
+++ b/src/app/pages/checkout/checkout.component.css
@@ -74,6 +74,10 @@
   width: 100%;
 }
 
+.card-input.card-input2{
+  width: 33.3%
+}
+
 .backend-error {
   word-wrap: break-word;
 }
